Updated for part 2

--- a/Mapping Yelp Search Results.ipynb
+++ b/Mapping Yelp Search Results.ipynb
@@ -102,10 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ffa40ba8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: plotly in c:\\users\\scyjt\\coding_stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages (5.11.0)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\scyjt\\coding_stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from plotly) (8.1.0)\n"
+     ]
+    }
+   ],
    "source": [
     "## Plotly is not included in your dojo-env\n",
     "!pip install plotly"
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6c26b323",
    "metadata": {},
    "outputs": [],
@@ -132,12 +141,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "73f882e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>[]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [[]]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Load in csv.gz\n"
+    "## Load in csv.gz\n",
+    "df = pd.read_csv('Data/Seattle-pizza.json')\n",
+    "df.head()"
    ]
   },
   {
@@ -196,7 +247,7 @@
    "outputs": [],
    "source": [
     "## slice out a single test coordinate\n",
-    "test_coord = None\n",
+    "test_coord = df.loc[0, 'coordinates']\n",
     "test_coord"
    ]
   },
@@ -235,7 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Use json.loads on the test coordinate\n"
+    "## Use json.loads on the test coordinate\n",
+    "json.loads(test_coords)"
    ]
   },
   {
@@ -253,7 +305,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## replace single ' with \" \n"
+    "## replace single ' with \" \n",
+    "test_coord =test_coord.replace(\"'\", '\"')\n",
+    "test_coord"
    ]
   },
   {
@@ -263,7 +317,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Use json.loads on the test coordinate, again\n"
+    "## Use json.loads on the test coordinate, again\n",
+    "json.loads(test_coords)"
    ]
   },
   {
@@ -282,7 +337,7 @@
    "outputs": [],
    "source": [
     "## replace ' with \" (entire column)\n",
-    "\n",
+    "df['coorinates']\n",
     "## apply json.loads\n"
    ]
   },
@@ -730,7 +785,7 @@
   "kernelspec": {
    "display_name": "Python (dojo-env)",
    "language": "python",
-   "name": "dojo-env-m1"
+   "name": "dojo-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -742,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.15"
   },
   "toc": {
    "base_numbering": 1,
