--- a/Mapping Yelp Search Results.ipynb
+++ b/Mapping Yelp Search Results.ipynb
@@ -146,48 +146,28 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>[]</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [[]]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "EmptyDataError",
+     "evalue": "No columns to parse from file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mEmptyDataError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m## Load in csv.gz\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df\u001b[38;5;241m=\u001b[39m\u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mData/Seattle-pizza.csv.gz\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m df\u001b[38;5;241m.\u001b[39mhead()\n",
+      "File \u001b[1;32m~\\Coding_Stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\util\\_decorators.py:211\u001b[0m, in \u001b[0;36mdeprecate_kwarg.<locals>._deprecate_kwarg.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    209\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    210\u001b[0m         kwargs[new_arg_name] \u001b[38;5;241m=\u001b[39m new_arg_value\n\u001b[1;32m--> 211\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\Coding_Stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\util\\_decorators.py:331\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    325\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) \u001b[38;5;241m>\u001b[39m num_allow_args:\n\u001b[0;32m    326\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[0;32m    327\u001b[0m         msg\u001b[38;5;241m.\u001b[39mformat(arguments\u001b[38;5;241m=\u001b[39m_format_argument_list(allow_args)),\n\u001b[0;32m    328\u001b[0m         \u001b[38;5;167;01mFutureWarning\u001b[39;00m,\n\u001b[0;32m    329\u001b[0m         stacklevel\u001b[38;5;241m=\u001b[39mfind_stack_level(),\n\u001b[0;32m    330\u001b[0m     )\n\u001b[1;32m--> 331\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\Coding_Stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:950\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[0;32m    935\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m    936\u001b[0m     dialect,\n\u001b[0;32m    937\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    946\u001b[0m     defaults\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdelimiter\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[0;32m    947\u001b[0m )\n\u001b[0;32m    948\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m--> 950\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Coding_Stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:605\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    602\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    604\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 605\u001b[0m parser \u001b[38;5;241m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m    607\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[0;32m    608\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
+      "File \u001b[1;32m~\\Coding_Stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:1442\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m   1439\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m   1441\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m-> 1442\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Coding_Stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:1753\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[1;34m(self, f, engine)\u001b[0m\n\u001b[0;32m   1750\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[0;32m   1752\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 1753\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m mapping[engine](f, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions)\n\u001b[0;32m   1754\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1755\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\Coding_Stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\io\\parsers\\c_parser_wrapper.py:79\u001b[0m, in \u001b[0;36mCParserWrapper.__init__\u001b[1;34m(self, src, **kwds)\u001b[0m\n\u001b[0;32m     76\u001b[0m     kwds\u001b[38;5;241m.\u001b[39mpop(key, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m     78\u001b[0m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m ensure_dtype_objs(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[1;32m---> 79\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reader \u001b[38;5;241m=\u001b[39m parsers\u001b[38;5;241m.\u001b[39mTextReader(src, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munnamed_cols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reader\u001b[38;5;241m.\u001b[39munnamed_cols\n\u001b[0;32m     83\u001b[0m \u001b[38;5;66;03m# error: Cannot determine type of 'names'\u001b[39;00m\n",
+      "File \u001b[1;32m~\\Coding_Stuff\\anaconda3\\envs\\dojo-env\\lib\\site-packages\\pandas\\_libs\\parsers.pyx:554\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mEmptyDataError\u001b[0m: No columns to parse from file"
+     ]
     }
    ],
    "source": [
     "## Load in csv.gz\n",
-    "df = pd.read_csv('Data/Seattle-pizza.json')\n",
+    "df = pd.read_csv('Data/Seattle-pizza.csv.gz')\n",
     "df.head()"
    ]
   },
@@ -222,10 +202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "825c85f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m## use .apply pd.Series to convert a dict to columns\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoordinates\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(pd\u001b[38;5;241m.\u001b[39mSeries)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "## use .apply pd.Series to convert a dict to columns\n",
     "df['coordinates'].apply(pd.Series)"
@@ -247,7 +239,7 @@
    "outputs": [],
    "source": [
     "## slice out a single test coordinate\n",
-    "test_coord = df.loc[0, 'coordinates']\n",
+    "test_coord = df.loc[1, 'coordinates']\n",
     "test_coord"
    ]
   },
@@ -337,8 +329,9 @@
    "outputs": [],
    "source": [
     "## replace ' with \" (entire column)\n",
-    "df['coorinates']\n",
-    "## apply json.loads\n"
+    "df['coorinates']= df['coordinates'].str.replace(\"'\", '\"')\n",
+    "## apply json.loads\n",
+    "df['coorinates']= df['coorinates'].apply(json.loads)"
    ]
   },
   {
@@ -348,7 +341,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## slice out a single test coordinate\n"
+    "## slice out a single test coordinate\n",
+    "test_coord = df.loc[5,'coordinates']\n",
+    "type(test_coord)"
    ]
   },
   {
@@ -377,7 +372,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Concatenate the 2 new columns and drop the original.\n"
+    "## Concatenate the 2 new columns and drop the original.\n",
+    "df = pd.concat([df,df['coordinates'].apply(pd.Series)],axis =1)\n",
+    "df =df.drop(columns= 'coordinates')\n",
+    "df.head(2)"
    ]
   },
   {
@@ -411,7 +409,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Load in mapbox api credentials from .secret\n"
+    "## Load in mapbox api credentials from .secret\n",
+    "with open('/Users/scyjt/.secret/mapbox.json') as f:\n",
+    "    login = json.load(f)\n",
+    "login.keys()"
    ]
   },
   {
@@ -429,7 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## set mapbox token\n"
+    "## set mapbox token\n",
+    "px.set_mapbox_access_token(login['api_key'])"
    ]
   },
   {
@@ -439,7 +441,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## use scatter_mapbox for M.V.P map\n"
+    "## use scatter_mapbox for M.V.P map\n",
+    "px.scatter_mapbox(df, lat= 'latitude',lon= 'logitude' ,mapbox_style='open-street-map')"
    ]
   },
   {
@@ -482,7 +485,9 @@
    },
    "outputs": [],
    "source": [
-    "## add hover_name (name) and hover_data for price,rating,location\n"
+    "## add hover_name (name) and hover_data for price,rating,location\n",
+    "px.scatter_mapbox(df, lat= 'latitude',lon= 'logitude' ,mapbox_style='open-street-map' ,hover_name='name' ,\n",
+    "                 hover_data= ['price','rating','location'])"
    ]
   },
   {
@@ -500,7 +505,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## slice out a test address\n"
+    "## slice out a test address\n",
+    "test_addr =df.loc[0, 'location']\n",
+    "test_addr"
    ]
   },
   {
@@ -530,7 +537,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## apply json.loads\n"
+    "## apply json.loads\n",
+    "df['location'] = df['location'].apply(json.loads)\n",
+    "df"
    ]
   },
   {
@@ -621,7 +630,7 @@
    "outputs": [],
    "source": [
     "## slice out a new test address and inspect\n",
-    "test_addr = df.loc[437, 'location']\n",
+    "test_addr = df.loc[0, 'location']\n",
     "test_addr"
    ]
   },
@@ -669,7 +678,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## remove any rows where display_location == 'ERROR'\n"
+    "## remove any rows where display_location == 'ERROR'\n",
+    "def fix_address(test_addr):\n",
+    "    try:\n",
+    "        return json.loads(test_addr)\n",
+    "    except:\n",
+    "        return 'ERROR'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e57fdd67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['location'].apply(fix_address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43c25a70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['display_location'] = df['location'].apply(fix_address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e812237",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errors = df[df['display_location']=='ERROR']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2aca3f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_addr = df.loc[854, 'location']\n",
+    "test_addr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0cb7161",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.loc[df['display_location']!='Error']\n",
+    "df.head(4)"
    ]
   },
   {
@@ -688,7 +754,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## use apply and lambda to slice correct key\n"
+    "## use apply and lambda to slice correct key\n",
+    "df['display_address'] = df['display_location'].apply(lambda x :x['display_address']) "
    ]
   },
   {
@@ -707,7 +774,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## slice out a test_address\n"
+    "## slice out a test_address\n",
+    "test_add =df.loc[339, 'display_address']\n",
+    "test_add"
    ]
   },
   {
@@ -717,7 +786,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## test using .join with a \"\\n\"\n"
+    "## test using .join with a \"\\n\"\n",
+    "'\\n'.join(test_add)"
    ]
   },
   {
@@ -729,7 +799,8 @@
    },
    "outputs": [],
    "source": [
-    "## apply the join to every row with a lambda\n"
+    "## apply the join to every row with a lambda\n",
+    "df['Address'] = df['display_address'].apply(lambda x: '\\n'.join(x))"
    ]
   },
   {
